ceph/cluster-setup/multi-node/cephadm/kubernetes-ingress-for-ceph/alerts-service-endpoint-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: alerts-external-ceph
  namespace: default
spec:
  ports:
    - name: grafana
      protocol: TCP
      port: 9093
      targetPort: 9093
---
apiVersion: v1
kind: Endpoints
metadata:
  name: alerts-external-ceph
  namespace: default
subsets:
  - addresses:
    - ip: 5.34.206.105
    - ip: 5.34.206.136
    - ip: 5.34.204.230
    ports:
    - name: alerts
      port: 9093
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-http01-edit-in-place: "false"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: external-ceph-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  name: alerts-external-ceph
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: alerts.ceph.cephadm.ir
    http:
      paths:
      - backend:
          service:
            name: alerts-external-ceph
            port:
              number: 9093
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - alerts.ceph.cephadm.ir
    secretName: alerts-ceph-tls-secret
