ceph/cluster-setup/multi-node/cephadm/kubernetes-ingress-for-ceph/grafana-service-endpoint-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-external-ceph
  namespace: default
spec:
  ports:
    - name: grafana
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-external-ceph
  namespace: default
subsets:
  - addresses:
    - ip: 192.168.200.21
    - ip: 192.168.200.22
    - ip: 192.168.200.23
    ports:
    - name: grafana
      port: 3000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-http01-edit-in-place: "false"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: grafana-external-ceph
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.ceph.mecan.ir
    http:
      paths:
      - backend:
          service:
            name: grafana-external-ceph
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.ceph.mecan.ir
    secretName: grafana-ceph-tls-secret
