ceph/cluster-setup/multi-node/cephadm/kubernetes-ingress-for-ceph/panel-service-endpoint-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: panel-external-ceph
  namespace: default
spec:
  ports:
    - name: grafana
      protocol: TCP
      port: 8443
      targetPort: 8443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: panel-external-ceph
  namespace: default
subsets:
  - addresses:
    - ip: 5.34.206.105
    - ip: 5.34.206.136
    - ip: 5.34.204.230
    ports:
    - name: panel
      port: 8443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-http01-edit-in-place: "false"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: panel-external-ceph
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: panel.ceph.cephadm.ir
    http:
      paths:
      - backend:
          service:
            name: panel-external-ceph
            port:
              number: 8443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - panel.ceph.cephadm.ir
    secretName: panel-ceph-tls-secret
