ceph/cluster-setup/multi-node/cephadm/kubernetes-ingress-for-ceph/prometheus-service-endpoint-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external-ceph
  namespace: default
spec:
  ports:
    - name: grafana
      protocol: TCP
      port: 9095
      targetPort: 9095
---
apiVersion: v1
kind: Endpoints
metadata:
  name: prometheus-external-ceph
  namespace: default
subsets:
  - addresses:
    - ip: 192.168.200.21
    - ip: 192.168.200.22
    - ip: 192.168.200.23
    ports:
    - name: prometheus
      port: 9095
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-http01-edit-in-place: "false"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: external-ceph-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  name: prometheus-external-ceph
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.ceph.mecan.ir
    http:
      paths:
      - backend:
          service:
            name: prometheus-external-ceph
            port:
              number: 9095
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheus.ceph.mecan.ir
    secretName: prometheus-ceph-tls-secret
